Automatically backed up by Learn

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "test"
   },
   "scripts": {
-  "test": "node_modules/browser-sync/bin/browser-sync.js start --config node_modules/learn-browser/bs-config.js"
-},
+    "test": "node_modules/browser-sync/bin/browser-sync.js start --config node_modules/learn-browser/bs-config.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/trentmoss05/npm-lab-online-web-ft-011419.git"
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/trentmoss05/npm-lab-online-web-ft-011419#readme",
   "dependencies": {
-    "learn-browser": "^0.1.24"
+    "learn-browser": "^0.1.24",
+    "moment": "^2.24.0"
   }
 }
