--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "moment",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -22,5 +22,6 @@
   "dependencies": {
     "learn-browser": "^0.1.24",
     "moment": "^2.24.0"
-  }
+  },
+  "devDependencies": {}
 }
