--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moment",
+  "name": "npm-lab",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,17 +11,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/trentmoss05/npm-lab-online-web-ft-011419.git"
+    "url": "git+https://github.com/learn-co-curriculum/npm-lab.git"
   },
-  "author": "",
+  "author": "Choux Maru and Doge",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/trentmoss05/npm-lab-online-web-ft-011419/issues"
+    "url": "https://github.com/learn-co-curriculum/npm-lab/issues"
   },
-  "homepage": "https://github.com/trentmoss05/npm-lab-online-web-ft-011419#readme",
+  "homepage": "https://github.com/learn-co-curriculum/npm-lab#readme",
   "dependencies": {
-    "learn-browser": "^0.1.24",
-    "moment": "^2.24.0"
-  },
-  "devDependencies": {}
+    "learn-browser": "^0.1.17",
+    "moment": "^2.22.2"
+  }
 }
